Review Request 11464 see PLS-4324 - users can select attributes for a rating engine and save them - fixed layout issue for buckets on play dashboard - removed a ben

--- a/le-ui/projects/leadprioritization/app/playbook/playbook.component.scss
+++ b/le-ui/projects/leadprioritization/app/playbook/playbook.component.scss
@@ -95,12 +95,11 @@ section.playbook.container {
     justify-content: center;
     height: 100%; // control the height in your components css, this should just fill that height
     & > ._rating {
-        @include flex-item(0 0 auto);
+        @include flex-item(1 0 auto);
         @include flex-container;
         flex-direction: column;
         justify-content: flex-end;
         margin: 0 15px;
-        width: 55px;
         div {
             @include flex-item(0 0 auto);
             text-align: center;
